--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -5,10 +5,8 @@ on:
       - 'station/*'
 
 jobs:
-  build:
-
+  lint:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
-      - uses: ricardochaves/python-lint@v1.4.0
+      - uses: actions/checkout@v2
+      - uses: cclauss/Find-Python-syntax-errors-action@master
